docs: Stop page reload flicker: hardwire TOC into sidebar , do not do this on window.onload.

--- a/doc/content/main.css
+++ b/doc/content/main.css
@@ -12,10 +12,9 @@
     font-family: Helvetica, Arial, sans-serif;
   }
   h1, h2, h3, h4, h5, h6 {
-    margin: 10px 0;
     color: #2362a1;
   }
-  h1 { font-size: 2.2rem; line-height: 40px;}
+  h1 { font-size: 2.2rem; padding-top: 1.1rem;}
   h2 { font-size: 1.5rem; }
   h3 { font-size: 1.2rem; }
   h4 { font-size: 1.1rem; }
@@ -230,7 +229,7 @@
     font-size: 125%;
     font-weight: bold;
     padding-left: 1rem;
-    margin-top: 0.75rem;
+    margin-top: 1.0rem;
     margin-bottom: 0.4rem;
     border-bottom: 1px solid #dddddd;
   }
@@ -324,17 +323,17 @@
   @media not screen and (min-width: 1px) and (max-width: 800px) {
     #sidebar {
       opacity: 1;
-      transition: opacity 0.3s ease;
+      transition: opacity 0.2s ease;
     }
     body.hide-toc #sidebar {
       width: 0;
       opacity: 0;
     }
     #main {
-      transition: margin-left 0.3s ease;
+      transition: margin-left 0.2s ease;
     }
     body.hide-toc #main {
-      transition: margin-left 0.3s ease;
+      transition: margin-left 0.2s ease;
     }
   }
   @media screen and (min-width: 1px) and (max-width: 800px) {
